# ios

./: .gitignore  .gitmodules  Makefile  project.yml
Radroots/: Info.plist  radroots.xcconfig
Radroots.xcodeproj/: project.pbxproj
Radroots.xcodeproj/xcshareddata/xcschemes/: Radroots.xcscheme
Radroots/App/: App.swift  AppEntry.swift  AppLogging.swift  AppRoot.swift  AppState.swift  RadrootsProvider.swift
Radroots/Config/: Base.xcconfig  Common.xcconfig  Debug.xcconfig  Release.xcconfig
Radroots/Runtime/: AuthSettings.swift  BuildConfig.swift  FieldCaptureIntake.swift  FieldDocumentInterchange.swift  FieldDocumentInterchangeUITestProbe.swift  FieldFileAccessUITestProbe.swift  FieldIdentityCustodyStore.swift  FieldIdentityPublicMetadataStore.swift  FieldLocalState.swift  FieldLocationCheckIn.swift  FieldRuntimeService.swift  FieldSecureIdentityStore.swift  FieldSessionCredentialStore.swift  LoggingSettings.swift  Nostr.swift  Radroots.swift  TradeListing.swift  TradeSettings.swift
Radroots/Views/: HomeView.swift  MarketView.swift  PostCreateView.swift  PostDetailView.swift  PostFeedView.swift  PostFeedViewModel.swift  PostView.swift  ProfileView.swift  RelaysView.swift  RootView.swift  SettingsView.swift  SetupView.swift  TradeListingCreateView.swift  TradeListingDetailView.swift  TradeOrderRequestView.swift
RadrootsCore/: Cargo.toml  Makefile  README.md  rust-toolchain.toml
RadrootsFFI/: .gitignore  Makefile  README.md
RadrootsFFI/Config/: ffi-build.env
RadrootsKit/: Package.swift
RadrootsTests/: RadrootsSmokeTests.swift
(+25 files in other folders)
