[package]
name = "radrootscore-ios"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "radroots ios rust wrapper manifest"

[workspace]
resolver = "2"

[workspace.dependencies]
radroots-app-core = { path = "../../crates/app-core" }
radroots-app-ffi-swift = { path = "../../crates/app-ffi-swift" }
radroots-app-wasm = { path = "../../crates/app-wasm" }

[dependencies]
radroots-app-ffi-swift = { workspace = true }
